--- a/Introduction to HTML/Introduction-to-HTML-Exercise/L1_03_Description-List/Solution/index.html
+++ b/Introduction to HTML/Introduction-to-HTML-Exercise/L1_03_Description-List/Solution/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <h1 id=header>Languages</h1>
+    <h1>Languages</h1>
     <d1>
         <dt>HTML </dt>
         <dd>Is a markup language</dd>
