second section added

--- a/Introduction to CSS/Introduction-to-CSS-Lab/Introduction-to-CSS-Lab/L2_02_Portfolio/Solution/index.html
+++ b/Introduction to CSS/Introduction-to-CSS-Lab/Introduction-to-CSS-Lab/L2_02_Portfolio/Solution/index.html
@@ -43,9 +43,10 @@
                 <li><i class="fa-brands fa-github"></i></li>
                 <li><i class="fa-brands fa-pinterest"></i></li>
             </ul>
+            <p>&copy Rossi, 2015. All rights reserved</p>
         </section>
         <section id="right"> 
-
+        <article><h2>SAVVY. CREATIVE. DETERMINED.</h2></article>
         </section>
     </main>
 </body>
