--- a/Introduction to CSS/Introduction-to-CSS-Lab/Introduction-to-CSS-Lab/L2_02_Portfolio/Solution/index.html
+++ b/Introduction to CSS/Introduction-to-CSS-Lab/Introduction-to-CSS-Lab/L2_02_Portfolio/Solution/index.html
@@ -32,11 +32,11 @@
     </header>
     <main>
         <section id="left"> 
-            <h1>PAUL ROSSI</h1>
+            <h1>Hristo Pisarev</h1>
             <p>web developer</p>
             <p>photographer</p>
-            <p>soccer fan</p>
-            <p>father ot two</p>
+            <p>automation engineer</p>
+            <p>passat driver</p>
             <ul>
                 <li><i class="fa-brands fa-facebook"></i></li>
                 <li><i class="fa-brands fa-instagram"></i></li>
@@ -46,7 +46,16 @@
             <p>&copy Rossi, 2015. All rights reserved</p>
         </section>
         <section id="right"> 
-        <article><h2>SAVVY. CREATIVE. DETERMINED.</h2></article>
+        <article>
+            <h2>SAVVY. CREATIVE. DETERMINED.</h2>
+            <p>I like to drive my passat furiously while learning to code.SAVVY. CREATIVE. DETERMINED.
+                While I specialize in front-end development and WordPress, I now also do a lot of work in mobile web and responsive development.</p>
+                <p>I like to drive my passat furiously while learning to code.SAVVY. CREATIVE. DETERMINED.
+                    While I specialize in front-end development and WordPress, I now also do a lot of work in mobile web and responsive development.</p>
+        </article>
+        <article id="right">
+            <img src="../Requirements-and-Resources/Images/thinking-man.png" alt="">
+        </article>
         </section>
     </main>
 </body>
